Trying to create the main dashboard page.

--- a/src/views/dash-dashboard.html
+++ b/src/views/dash-dashboard.html
@@ -1,14 +1,6 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../elements/dash-sparklet.html">
+
 
 <dom-module id="dash-dashboard">
 
@@ -19,46 +11,39 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
         padding: 10px;
       }
-      .card {
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-        padding: 16px;
-        margin: 24px;
-        border-radius: 5px;
-        background-color: #fff;
-        color: #757575;
-      }
-      .circle {
-        display: inline-block;
-        height: 64px;
-        width: 64px;
-        border-radius: 50%;
-        background: #ddd;
-        line-height: 64px;
-        font-size: 30px;
-        color: #555;
-        text-align: center;
-      }
       h1 {
-        font-size: 22px;
         margin: 16px 0;
         color: #212121;
       }
     </style>
 
-    <div class="card">
-      <div class="circle">1</div>
-      <h1>Dashboard</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
-    
+    <h1>Dashboard</h1>
+
+    <dash-sparkbox>
+      <dash-sparklet id="firstSpark"></dash-sparklet>
+      <dash-sparklet></dash-sparklet>
+      <dash-sparklet></dash-sparklet>
+      <dash-sparklet></dash-sparklet>
+    </dash-sparkbox>
+
+    <dash-chartbox name="topgross"></dash-chartbox>
+    <dash-chartbox name="notes"></dash-chartbox>
+    <dash-chartbox name="top10"></dash-chartbox>
+    <dash-chartbox name="popular"></dash-chartbox>
+
+
   </template>
 
   <script>
 
     Polymer({
 
-      is: 'dash-dashboard'
+      is: 'dash-dashboard',
+
+      ready: function() {
+        this.$.firstSpark.data = [1,2,3];
+        this.$.firstSpark.testText = 'floozy';
+      }
 
     });
 
