--- a/src/views/dash-dashboard.html
+++ b/src/views/dash-dashboard.html
@@ -11,14 +11,15 @@
       :host {
         display: block;
         padding: 10px;
+        box-sizing: border-box;
+
       }
       h1 {
-        margin: 16px 0;
-        color: #212121;
       }
 
-      dash-sparkbox {
+      .sparkbox {
         width: 100%;
+        margin: 16px 0;
         /*
         display: flex;
         flex-flow: row wrap;
@@ -36,16 +37,19 @@
         display: inline-block;
       }
 
-
       dash-chartbox {
         display: block;
         background-color: #ddd;
         text-align: center;
       }
+
+      dash-panel {
+        margin: 16px 0;
+      }
     </style>
 
     <h1>Dashboard</h1>
-    <dash-sparkbox>
+    <div class="sparkbox">
       <div class="row">
         <dash-sparklet id="traffic" suffix="K" label="Traffic"></dash-sparklet>
         <dash-sparklet id="daily-revenue" prefix="$" suffix="M" label="Revenue/day"></dash-sparklet>
@@ -55,11 +59,9 @@
       <div class="row">
 
       </div>
-    </dash-sparkbox>
-
-    <div>
-      <dash-panel>Foobar</dash-panel>
     </div>
+
+    <dash-panel>Foobar</dash-panel>
     <dash-chartbox name="topgross">
       <h3>Top Grossing</h3>
     </dash-chartbox>
